open post in new window

--- a/medium/index.mustache
+++ b/medium/index.mustache
@@ -59,7 +59,7 @@
 							<a href="#">Comments</a>
 					</div>
 				</div>
-				<a href="{{{subject.url}}}">
+				<a target="_blank" href="{{{subject.url}}}">
 					<img src="{{{subject.image}}}=s220-c">
 				</a>
 			</div>
