set min width for preview image

--- a/medium/index.mustache
+++ b/medium/index.mustache
@@ -60,7 +60,7 @@
 					</div>
 				</div>
 				<a target="_blank" href="{{{subject.url}}}">
-					<img src="{{{subject.image}}}=s220-c">
+					<img style="min-width:120px" src="{{{subject.image}}}=s220-c">
 				</a>
 			</div>
       {{/threads}}
