link to site from home page

--- a/medium/index.mustache
+++ b/medium/index.mustache
@@ -51,8 +51,8 @@
 					</h2>
 					<p class="text-muted">{{subject.preview}}</p>
 					<div class="card-text text-muted small">
-							<img class="mr-2" style="border-radius:50%" src="{{{site.image}}}=s28-c" />
-						 	<span class="text-capitalize">{{site.name}}</span>
+							<a href="/site/{{site.slug}}"><img class="mr-2" style="border-radius:50%" src="{{{site.image}}}=s28-c" /></a>
+						 	<a href="/site/{{site.slug}}" class="text-capitalize">{{site.name}}</a>
 							<span style="margin:6px">&middot;</span>
 							{{subject.dateString}}
 							<span style="margin:6px">&middot;</span>
