add google analytics script

--- a/medium/partials/scripts.mustache
+++ b/medium/partials/scripts.mustache
@@ -1,3 +1,4 @@
 <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
 <script type="text/javascript" src="{{{cdn}}}/medium/js/vendor.min.js"></script>
 <script type="text/javascript" src="{{{cdn}}}/scripts/auth.js"></script>
+{{#renderAnalytics}}{{>analytics}}{{/renderAnalytics}}
