connect templates page with css

--- a/medium/templates.mustache
+++ b/medium/templates.mustache
@@ -14,13 +14,7 @@
     <meta property="og:image:height" content="260px" />
     <meta property="og:description" content="Vertex 360 is a powerful, fully featured, easy website builder made for busy people. Create your website in under an hour by selecting one of our professional templates and simply updating it with your content. No more messing with confusing editors, drag & drop tools, or ridiculously complicated features for 'beginners'. On Vertex 360, simply input your text and images and move on with your life, business, family - the important stuff." />
 
-    <link rel="icon" href="https://lh3.googleusercontent.com/5SVrpLI9utkuVJbQb48cpD3tar59mgWaWSAM73Ghj8dxFJMD2UOzkhO5ptWDd2uV2eqgSvDCSa-Ad8aOrygXx6nv=s32-c" type="image/png" />
-    <link href="{{{cdn}}}/snap/css/inter-ui.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="{{{cdn}}}/snap/css/slick.min.css">
-    <link rel="stylesheet" href="{{{cdn}}}/snap/css/slick-theme.min.css">
-    <link rel="stylesheet" href="{{{cdn}}}/snap/css/blue.css" id="theme-color">
-
+    {{>head}}
     <style>
         .wrapper {
             display: flex;
@@ -58,7 +52,6 @@
             min-height: 100vh;
             transition: all 0.3s;
             position: relative;
-            padding-top: 3rem;
         }
         #features {
             min-height: 100vh;
@@ -187,6 +180,10 @@
 
       h5 {
         text-transform: capitalize;
+      }
+
+      .sidebar-link {
+        text-decoration: none !important;
       }
 		</style>
 </head>
