--- a/medium/template.mustache
+++ b/medium/template.mustache
@@ -141,11 +141,11 @@
                 </button>
               </div>
               <div class="modal-body text-center">
-                <img style="max-width:50%;" src="{{{template.image}}}=s750" />
+                <img style="max-width:60%;" src="{{{template.image}}}=s750" />
                 <p class="text-center mt-4">To launch this template on your account and update its configuration with your content, enter the name of your site below.</p>
                 <hr />
               </div>
-              <div id="btn-launch-container" class="modal-footer pt-0">
+              <div id="btn-launch-container" style="border:none" class="modal-footer pt-0">
                 <input style="background:#fffffa" class="form-control" type="text" id="input-site-name" placeholder="Your Site Name" />
                 <button id="btn-launch-template" type="button" class="btn btn-primary">Launch!</button>
               </div>
