open profile in new window

--- a/medium/widget/comments.mustache
+++ b/medium/widget/comments.mustache
@@ -120,7 +120,7 @@
                   <img src="{{{profile.image}}}=s120-c" alt="" />
                 </a>
                 <small>
-                  by <a class="text-blue" href="/profile/{{profile.slug}}">{{profile.username}}</a>
+                  by <a target="_blank" class="text-blue" href="/profile/{{profile.slug}}">{{profile.username}}</a>
                   <span>·</span>
                   {{dateString}}
                 </small>
@@ -143,7 +143,7 @@
       <img src="<%{profile.image}%>=s96-c" alt="" />
     </a>
     <small>
-      by <a class="text-blue" href="/profile/<% profile.slug %>"><% profile.username %></a>
+      by <a target="_blank" class="text-blue" href="/profile/<% profile.slug %>"><% profile.username %></a>
       <span>·</span>
       <% dateString %>
     </small>
