bottom padding for comments wrapper

--- a/medium/widget/comments.mustache
+++ b/medium/widget/comments.mustache
@@ -115,12 +115,15 @@
       width: 38px;
       height:38px;
     }
+
+    #wrapper {
+      padding-bottom: 80px;
+    }
   </style>
 </head>
 
 <body>
 
-<!-- Wrapper -->
 <div id="wrapper">
   <div id="container-replies">
     {{#comments}}
