--- a/medium/widget/comments.mustache
+++ b/medium/widget/comments.mustache
@@ -132,7 +132,7 @@
         <p class="margin-top-0 comment-text">{{{text}}}</p>
         <img src="{{{profile.image}}}=s120-c" alt="" />
         <small>
-          <span>by {{profile.slug}}">{{profile.username}}</span>
+          <span>by {{profile.slug}} {{profile.username}}</span>
           <span>·</span>
           {{dateString}}
         </small>
