--- a/medium/widget/comments.mustache
+++ b/medium/widget/comments.mustache
@@ -75,6 +75,11 @@
 <body>
 
 <div id="wrapper">
+  <div>
+    <h3>{{entity.title}}</h3>
+    <p>{{entity.preview}}</p>
+
+  </div>
   <div id="container-replies">
     {{#comments}}
     <div class="reply-box" style="border-bottom:1px solid #ededed">
