--- a/medium/widget/comments.mustache
+++ b/medium/widget/comments.mustache
@@ -75,11 +75,14 @@
 <body>
 
 <div id="wrapper">
-  <div>
+  {{#isMobile}}
+  <div style="padding:16px;background:#fffffa">
     <h3>{{entity.title}}</h3>
     <p>{{entity.preview}}</p>
-
+    <img src="https://lh3.googleusercontent.com/LARXvti0sZzR_lskYdL2sIZnIFaAMDu5KyyoZQCrRbFhVIHfno2OBNouNnEMkfnbqEYECqGfWzIFS6yGDZA8sBbw3g=s160" />
   </div>
+  {{/isMobile}}
+
   <div id="container-replies">
     {{#comments}}
     <div class="reply-box" style="border-bottom:1px solid #ededed">
