--- a/medium/widget/comments.mustache
+++ b/medium/widget/comments.mustache
@@ -80,8 +80,8 @@
     <a href="/">
       <img style="width:160px" src="https://lh3.googleusercontent.com/LARXvti0sZzR_lskYdL2sIZnIFaAMDu5KyyoZQCrRbFhVIHfno2OBNouNnEMkfnbqEYECqGfWzIFS6yGDZA8sBbw3g=s320" />
     </a>
-    <h3 style="color:#fff">{{entity.title}}</h3>
-    <p style="color:#999;font-size:14px;line-height:22px">{{entity.preview}}</p>
+    <h3 style="color:#fff;line-height:1.3">{{entity.title}}</h3>
+    <small>{{entity.dateString}}</small>
   </div>
   {{/isMobile}}
 
