--- a/medium/widget/comments.mustache
+++ b/medium/widget/comments.mustache
@@ -81,7 +81,7 @@
       <img style="width:160px" src="https://lh3.googleusercontent.com/LARXvti0sZzR_lskYdL2sIZnIFaAMDu5KyyoZQCrRbFhVIHfno2OBNouNnEMkfnbqEYECqGfWzIFS6yGDZA8sBbw3g=s320" />
     </a>
     <h3 style="color:#fff;line-height:1.3">{{entity.title}}</h3>
-    <small>{{entity.dateString}}</small>
+    <small style="color:#fff">{{entity.dateString}}</small>
   </div>
   {{/isMobile}}
 
