--- a/medium/widget/comments.mustache
+++ b/medium/widget/comments.mustache
@@ -82,7 +82,7 @@
     </a>
     <br /><br />
     <small style="color:#fff">{{entity.dateString}}</small>
-    <h3 style="color:#fff;line-height:1.3">{{entity.title}}</h3>
+    <h3 style="color:#fff;line-height:1.3;margin-top:0px">{{entity.title}}</h3>
   </div>
   {{/isMobile}}
 
