render comment text as html

--- a/medium/thread.mustache
+++ b/medium/thread.mustache
@@ -58,7 +58,7 @@
               <span style="margin:6px">&middot;</span>
               <span>{{dateString}}</span>
 					</div>
-          <p class="text-muted">{{text}}</p>
+          <p class="text-muted">{{{text}}}</p>
 				</div>
 			</div>
       {{/comments}}
