remove sample post

--- a/medium/thread.mustache
+++ b/medium/thread.mustache
@@ -21,34 +21,12 @@
 <div class="container pt-4 pb-4">
 	<div class="row justify-content-between">
 		<div class="col-md-8">
-			<h3 class="mb-0"><span>To the Ruling Class - Jeffrey Epstein is Your Last Chance</span></h3>
-      <small>July 8th, 2019</small>
+			<h3 class="mb-0"><span>{{entity.title}}</span></h3>
+      <small>{{entity.dateString}}</small>
       <span style="margin:6px">&middot;</span>
       <small><a target="_blank" style="text-decoration:none" href="#">The Narrative</a></small>
       <textarea class="form-control mt-4 mb-3" rows="4" style="padding:0px 8px"></textarea>
-      <button class="mb-5">Add Comment</button>
-
-      <div class="mt-2 d-flex justify-content-between post-preview">
-				<div class="pr-4">
-					<div class="card-text text-muted small">
-  					 	<a href="#">Dkwon</a>
-              <span style="margin:6px">&middot;</span>
-              <span>July 8th, 2019</span>
-					</div>
-          <p class="text-muted">Andrew Yang's new ideas are all over the place. He also comes off as a bit self-indulgent. He is being propped up and used by Fox News as a poster child for Democrats with crazy far-fetched "socialist" ideas.</p>
-				</div>
-			</div>
-
-      <div class="mt-2 d-flex justify-content-between post-preview">
-				<div class="pr-4">
-					<div class="card-text text-muted small">
-  					 	<a href="#">Dkwon</a>
-              <span style="margin:6px">&middot;</span>
-              <span>July 8th, 2019</span>
-					</div>
-          <p class="text-muted">Andrew Yang's new ideas are all over the place. He also comes off as a bit self-indulgent. He is being propped up and used by Fox News as a poster child for Democrats with crazy far-fetched "socialist" ideas.</p>
-				</div>
-			</div>
+      <button class="mb-5 btn btn-info">Add Comment</button>
 
       {{#comments}}
       <div class="mt-2 d-flex justify-content-between post-preview">
