--- a/medium/thread.mustache
+++ b/medium/thread.mustache
@@ -76,46 +76,60 @@
       var threadId = data.thread // ID number
       var thread = null // full thread data
       var schema = data.schema // post, video, episode, etc
+      var comments = []
+
+      var reloadUI = function(){
+        var tpl = $('#tpl-comment').html()
+        var commentsHtml = ''
+        comments.forEach(function(comment){
+          commentsHtml += Mustache.render(tpl, comment)
+        })
+
+        $('#comments-container').html(commentsHtml)
+      }
 
       var fetchComments = function(){
         console.log('FETCH COMMENTS: ' + JSON.stringify(thread))
+        window.vertexLib.getRequest('/api/comment?thread='+threadId, null, function(err, resp){
+          if (err)
+            return
 
+          comments = resp.results
+          reloadUI()
+        })
+      }
+
+      var createThread = function(){
+        // window.vertexLib.postRequest('/api/thread', {}, function(err, resp){
+        //   if (err)
+        //     return
+        //
+        //   if (resp.confirmation != 'success'){
+        //     console.log('ERR2 - ' + JSON.stringify(resp))
+        //     return
+        //   }
+        //
+        //   thread = resp.data
+        //   fetchComments()
+        // })
       }
 
       // check if thread entity exists, if not create:
       window.vertexLib.getRequest('/api/thread?subject.id='+threadId, null, function(err, resp){
-        console.log('RESP == ' + JSON.stringify(resp))
         if (err){
           return
         }
 
-        if (resp.confirmation == 'success'){
-          if (resp.results.length == 0){
-            console.log('THREAD NOT FOUND')
-            return
-          }
-
-          thread = resp.results[0]
-          fetchComments()
+        if (resp.results.length == 0){ // not found, create
+          console.log('THREAD NOT FOUND')
+          createThread()
           return
         }
 
-        // not found, create new thread:
-        window.vertexLib.postRequest('/api/thread', {}, function(err, resp){
-          if (err)
-            return
-
-          if (resp.confirmation != 'success'){
-            console.log('ERR2 - ' + JSON.stringify(resp))
-            return
-          }
-
-          thread = resp.data
-          fetchComments()
-        })
+        thread = resp.results[0]
+        fetchComments()
         return
       })
-
     })()
   </script>
 </body>
