--- a/medium/thread.mustache
+++ b/medium/thread.mustache
@@ -21,16 +21,12 @@
 <div class="container pt-4 pb-4">
 	<div class="row justify-content-between">
 		<div class="col-md-8">
-			<h3 class="mb-0"><span>{{entity.title}}</span></h3>
-      <small>{{entity.dateString}}</small>
-      <span style="margin:6px">&middot;</span>
-      <small><a target="_blank" style="text-decoration:none" href="#">The Narrative</a></small>
+      <div id="thread-container"></div>
       <textarea class="form-control mt-4 mb-3" rows="4" style="padding:0px 8px"></textarea>
       <button class="mb-5 btn btn-info">Add Comment</button>
-
       <div id="comments-container"></div>
-
 		</div>
+
 		<div class="col-md-4 pl-4">
       <div class="sticky-top">
         <div class="mb-5" style="padding:24px;background:#dedafb">
@@ -50,6 +46,13 @@
 </div>
   {{>footer}}
   {{>auth}}
+
+  <script type="text/template" id="tpl-thread">
+    <h3 class="mb-0"><span><% subject.title %></span></h3>
+    <small><% subject.dateString %></small>
+    <span style="margin:6px">&middot;</span>
+    <small><a target="_blank" style="text-decoration:none" href="<% {subject.url} %>"><% site.name %></a></small>
+  </script>
 
   <script type="text/template" id="tpl-comment">
     <div class="mt-2 d-flex justify-content-between post-preview">
@@ -79,6 +82,10 @@
       var comments = []
 
       var reloadUI = function(){
+        var tplThread = $('#tpl-thread').html()
+        threadHtml += Mustache.render(tplThread, thread)
+        $('#thread-container').html(threadHtml)
+
         var tpl = $('#tpl-comment').html()
         var commentsHtml = ''
         comments.forEach(function(comment){
