link to internal site page

--- a/medium/thread.mustache
+++ b/medium/thread.mustache
@@ -54,7 +54,7 @@
     <small><% subject.dateString %></small>
     <span style="margin:6px">&middot;</span>
     <small>
-      <a target="_blank" style="text-decoration:none" href="<%{site.url}%>"><% site.name %></a>
+      <a style="text-decoration:none" href="/site/<% site.slug %>"><% site.name %></a>
     </small>
   </script>
 
