--- a/medium/thread.mustache
+++ b/medium/thread.mustache
@@ -111,20 +111,56 @@
         })
       }
 
+      /*
       var createThread = function(){
-        // window.vertexLib.postRequest('/api/thread', {}, function(err, resp){
-        //   if (err)
-        //     return
-        //
-        //   if (resp.confirmation != 'success'){
-        //     console.log('ERR2 - ' + JSON.stringify(resp))
-        //     return
-        //   }
-        //
-        //   thread = resp.data
-        //   fetchComments()
-        // })
-      }
+        console.log('CREATE THREAD')
+        var entityEndpoint = site.url+'/'+schema+'/'+threadId
+        window.getRequest(entityEndpoint, null, function(err, resp){
+          if (err)
+            return
+
+          if (resp.confirmation != 'success'){
+            alert('Not Found')
+            return
+          }
+
+          var entity = resp.data // blog post, video, episode, etc
+          var params = {
+            slug: entity.slug,
+            subject: JSON.stringify({
+              id: entity.id,
+              schema: entity.schema,
+              title: entity.title,
+              preview: entity.preview,
+              dateString: entity.dateString,
+              slug: entity.slug,
+              image: entity.image,
+              url: entity.url,
+              category: entity.category
+            }),
+            site: JSON.stringify({
+              id: site.id,
+              slug: site.slug,
+              name: site.name,
+              image: site.image,
+              url: site.url
+            })
+          }
+
+          window.vertexLib.postRequest('/api/thread', params, function(err, resp){
+            if (err)
+              return
+
+            if (resp.confirmation != 'success'){
+              console.log('ERR2 - ' + JSON.stringify(resp))
+              return
+            }
+
+            thread = resp.data
+            reloadUI()
+          })
+        })
+      } */
 
       // check if thread entity exists, if not create:
       window.vertexLib.getRequest('/api/thread?subject.id='+threadId, null, function(err, resp){
@@ -134,7 +170,7 @@
 
         if (resp.results.length == 0){ // not found, create
           console.log('THREAD NOT FOUND')
-          createThread()
+          // createThread()
           return
         }
 
