--- a/medium/index.mustache
+++ b/medium/index.mustache
@@ -56,7 +56,7 @@
 							<span style="margin:6px">&middot;</span>
 							{{subject.dateString}}
 							<span style="margin:6px">&middot;</span>
-							<a href="/comments?thread={{subject.id}}&schema={{subject.schema}}&slug={{subject.slug}}">Comments</a>
+							<a href="/comments?thread={{subject.id}}&schema={{subject.schema}}&site={{site.slug}}">Comments</a>
 					</div>
 				</div>
 				<a target="_blank" href="{{{subject.url}}}">
