show register modal

--- a/medium/thread.mustache
+++ b/medium/thread.mustache
@@ -132,6 +132,7 @@
 
         if (user == null){
           alert('Please login or register to submit comment.')
+          document.getElementById('nav-register').click()
           return
         }
 
