--- a/medium/partials/nav.mustache
+++ b/medium/partials/nav.mustache
@@ -24,7 +24,7 @@
 				<a class="nav-link" href="#" style="color:#03a87c" href="#" data-toggle="modal" data-target="#login-modal">Sign In</a>
 			</li>
 			<li class="nav-item highlight ml-4" id="login-container">
-				<a style="background:#03a87c;color:#fff !important" class="nav-link" href="#" data-toggle="modal" data-target="#register-modal">JOIN VERTEX</a>
+				<a id="nav-register" style="background:#03a87c;color:#fff !important" class="nav-link" href="#" data-toggle="modal" data-target="#register-modal">JOIN VERTEX</a>
 			</li>
 		</ul>
 	</div>
