--- a/medium/thread.mustache
+++ b/medium/thread.mustache
@@ -22,7 +22,7 @@
 	<div class="row justify-content-between">
 		<div class="col-md-8">
       <div id="thread-container"></div>
-      <textarea id="text-area-comment" class="form-control mt-4 mb-3" rows="4" style="padding:0px 8px"></textarea>
+      <textarea id="text-area-comment" class="form-control mt-4 mb-3" rows="4" style="padding:0px 8px;resize:none"></textarea>
       <button id="btn-submit-comment" class="mb-5 btn btn-info">Add Comment</button>
       <div id="comments-container"></div>
 		</div>
