--- a/medium/widget/comments.mustache
+++ b/medium/widget/comments.mustache
@@ -1,221 +1,172 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>{{comment.title}}</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link rel="stylesheet" href="{{{cdn}}}/dist/css/style.min.css">
-  <link rel="icon" href="https://lh3.googleusercontent.com/5SVrpLI9utkuVJbQb48cpD3tar59mgWaWSAM73Ghj8dxFJMD2UOzkhO5ptWDd2uV2eqgSvDCSa-Ad8aOrygXx6nv=s32-c" type="image/png" />
-
-  <meta property="og:title" content="{{comment.title}}" />
-	<meta property="og:type" content="article" />
-	<meta property="og:url" content="https://www.vertex360.co/comments/{{comment.slug}}" />
-	<meta property="og:image" content="{{{comment.image}}}=s260-c" />
-	<meta property="og:image:width" content="260px" />
-	<meta property="og:image:height" content="260px" />
-	<meta property="og:description" content="{{comment.text}}" />
-
-  <style>
-    .text-blue {
-      color: blue;
-    }
-
-    .reply-box {
-      margin-bottom: 0px;
-    }
-
-    .reply-box p {
-      font-size: 15px;
-      line-height: 27px;
-      margin-bottom: 20px;
-    }
-
-    .reply-box img {
-      width: 32px;
-      border-radius: 50%;
-      margin-right: 6px;
-    }
-
-    .reply-box span {
-      margin: 8px;
-      font-weight: 600;
-      color: #000;
-    }
-
-    .reply-box a {
-      color: red;
-    }
-
-    .comment-text a {
-      color: red
-    }
-
-    .comment-form {
-      display: flex;
-      padding: 16px;
-      background: #f9f9f9;
-      border-top: 1px solid #ddd;
-      width: 100%;
-      position: fixed;
-      bottom: 0;
-    }
-
-    .icon-avatar {
-      border-radius:50%;
-      margin-right: 8px;
-      width: 38px;
-      height:38px;
-    }
-
-    #wrapper {
-      padding-bottom: 80px;
-    }
-  </style>
+  <title>Vertex 360</title>
+  <meta name="description" content="" />
+  {{>head}}
 </head>
 
 <body>
+  {{>nav}}
 
-<div id="wrapper">
-  {{#isMobile}}
-  <div style="padding:16px;background:#5d5077;border-bottom:1px solid #ddd">
-    <a href="/">
-      <img style="width:160px" src="https://lh3.googleusercontent.com/LARXvti0sZzR_lskYdL2sIZnIFaAMDu5KyyoZQCrRbFhVIHfno2OBNouNnEMkfnbqEYECqGfWzIFS6yGDZA8sBbw3g=s320" />
-    </a>
-    <br /><br />
-    <small style="color:#fff">{{entity.dateString}}</small>
-    <h3 style="color:#fff;line-height:1.3;margin-top:0px">{{entity.title}}</h3>
+<div class="container pt-5">
+  <div class="row">
+
+
   </div>
-  {{/isMobile}}
+</div>
+<!-- End Header -->
 
-  <div id="container-replies">
-    {{#comments}}
-    <div class="reply-box" style="border-bottom:1px solid #ededed">
-      <div style="padding:16px">
-        <p class="margin-top-0 comment-text">{{{text}}}</p>
-        <img src="{{{profile.image}}}=s120-c" alt="" />
-        <small>
-          <span>by {{profile.username}}</span>
-          <span>·</span>
-          {{dateString}}
-        </small>
+
+<div class="container pt-4 pb-4">
+	<div class="row justify-content-between">
+		<div class="col-md-8">
+      <div id="thread-container"></div>
+      <textarea id="text-area-comment" class="form-control mt-4 mb-3" rows="4" style="padding:0px 8px;resize:none"></textarea>
+      <button id="btn-submit-comment" class="mb-5 btn btn-info">Add Comment</button>
+      <div id="comments-container"></div>
+		</div>
+
+		<div class="col-md-4 pl-4">
+      <div class="sticky-top">
+        <div class="mb-5" style="padding:24px;background:#dedafb">
+          <h2>Build Your Brand</h2>
+          <div class="text-center mb-4 mt-3">
+            <img style="max-width:200px" src="https://lh3.googleusercontent.com/uFcvuH_Yifl0PaAMqcNIvuUqXl67M2hc54S523D1pwceSWrphPExoGe2rhPauCNjTgxzVQWSUolQTNeoow4m9mK5ibI" />
+          </div>
+          <p>Vertex 360 is a platform for content creators in the modern media age. Whether you manage a YouTube channel, podcast, blog, Instagram folowing, or all of the above, Vertex 360 provides the best way to deliver your content under a unified, coherent brand that you control.</p>
+          <a href="/about" class="btn btn-danger w-100">Learn More</a>
+        </div>
+      </div>
+
+		</div>
+	</div>
+</div>
+  {{>footer}}
+  {{>auth}}
+
+  <script type="text/template" id="tpl-thread">
+    <h3 class="mb-0">
+      <a target="_blank" style="text-decoration:none" href="<%{subject.url}%>"><span><% subject.title %></span></a>
+    </h3>
+    <small><% subject.dateString %></small>
+    <span style="margin:6px">&middot;</span>
+    <small>
+      <a style="text-decoration:none" href="/site/<% site.slug %>"><% site.name %></a>
+    </small>
+  </script>
+
+  <script type="text/template" id="tpl-comment">
+    <div class="mt-2 d-flex justify-content-between post-preview">
+      <div class="pr-4">
+        <div class="card-text text-muted small">
+            <a href="#"><% profile.username %></a>
+            <span style="margin:6px">&middot;</span>
+            <span><% dateString %></span>
+        </div>
+        <p class="text-muted"><%{text}%></p>
       </div>
     </div>
-    {{/comments}}
-  </div>
+  </script>
 
-  <div class="comment-form">
-    {{#user}}<img class="icon-avatar" src="{{{user.image}}}=s120-c" alt="" />{{/user}}
-    <input style="flex:1; margin-right:16px;margin-bottom:0px" type="text" class="form-control" placeholder="Enter comment" />
-    <button style="height:50px" class="btn btn-sm btn-info">Submit</button>
-  </div>
+  {{>scripts}}
+  <script type="text/javascript" src="{{{cdn}}}/js/mustache.js"></script>
 
-
-</div>
-
-<script type="text/template" id="tpl-reply">
-  <div class="reply-box">
-    <a target="_blank" href="/profile/<% profile.slug %>">
-      <img src="<%{profile.image}%>=s96-c" alt="" />
-    </a>
-    <small>
-      by <a target="_blank" class="text-blue" href="/profile/<% profile.slug %>"><% profile.username %></a>
-      <span>·</span>
-      <% dateString %>
-    </small>
-    <p class="margin-top-10 comment-text"><%{text}%></p>
-  </div>
-</script>
-
-  <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
-  <script type="text/javascript" src="{{{cdn}}}/dist/js/vendor.min.js"></script>
-  <script type="text/javascript" src="{{{cdn}}}/dist/js/referrer.min.js"></script>
   <script>
     (function(){
       Mustache.tags = ["<%", "%>"] // change delimiter so it doesn't conflict server side
       var data = window.__PRELOADED__
       var user = data.user
-      var post = data.post
-      var comments = data.comments || []
-      // console.log('USER == ' + JSON.stringify(user))
+      var site = data.site // full site data
+      var threadId = data.thread // ID number
+      var schema = data.schema // post, video, episode, etc
 
-      var postRequest = function(url, params, completion){
-        $.ajax({
-          url: url,
-          type: 'POST',
-          data: params,
-          success: function(response){
-            completion(null, response)
-          },
-          error: function(response){
-            completion(response, null)
-          }
+      var thread = null // full thread data
+      var comments = []
+
+      var reloadUI = function(){
+        var tplThread = $('#tpl-thread').html()
+        var threadHtml = Mustache.render(tplThread, thread)
+        $('#thread-container').html(threadHtml)
+
+        var tpl = $('#tpl-comment').html()
+        var commentsHtml = ''
+        comments.forEach(function(comment){
+          commentsHtml += Mustache.render(tpl, comment)
+        })
+
+        $('#comments-container').html(commentsHtml)
+      }
+
+      var fetchComments = function(){
+        console.log('FETCH COMMENTS: ' + JSON.stringify(thread))
+        window.vertexLib.getRequest('/api/comment?thread='+threadId, null, function(err, resp){
+          if (err)
+            return
+
+          comments = resp.results
+          reloadUI()
         })
       }
 
-      if (user != null){
-        $('#reply-avatar').attr('src', user.image+'=s120-c')
-      }
+      // check if thread entity exists:
+      window.vertexLib.getRequest('/api/thread?subject.id='+threadId, null, function(err, resp){
+        if (err){
+          return
+        }
 
-      $('#btn-submit-reply').click(function(event){
+        if (resp.results.length == 0){
+          // console.log('THREAD NOT FOUND')
+          alert('Error - Inavlid URL.')
+          return
+        }
+
+        thread = resp.results[0]
+        fetchComments()
+        return
+      })
+
+      $('#btn-submit-comment').click(function(event){
         if (event)
           event.preventDefault()
 
         if (user == null){
-          alert('Please log in or register to submit a reply.')
+          alert('Please login or register to submit comment.')
+          document.getElementById('nav-register').click()
           return
         }
 
-        // no title required
-        var reply = {
-          profile: JSON.stringify({id:user.id, firstName:user.firstName, lastName:user.lastName, username:user.username, image:user.image, slug:user.slug}),
-          text: $('#input-reply-text').val(),
-          isInitial: 'no',
-          thread: post.id
-        }
-
-        if (reply.text.length == 0){
-          alert('Please enter text for your reply')
+        var commentText = $('#text-area-comment').val()
+        if (commentText.length == 0){
+          alert('Please enter a comment.')
           return
         }
 
-        postRequest('/api/comment', reply, function(err, response){
-          if (err){
-            alert('Error - ' + err)
-            return
-          }
-
-          if (response.confirmation != 'success'){
-            alert('Error - ' + response.message)
-            return
-          }
-
-          // console.log('REPLY CREATED: ' + JSON.stringify(response))
-          comments.push(response.result)
-          var tpl = $('#tpl-reply').html()
-          var repliesHtml = ''
-          comments.forEach(function(reply){
-            repliesHtml += Mustache.render(tpl, reply)
+        var comment = {
+          text: commentText,
+          thread: threadId,
+          profile: JSON.stringify({
+            id: user.id,
+            firstName: user.firstName,
+            lastName: user.lastName,
+            username: user.username,
+            slug: user.slug
           })
+        }
 
-          $('#container-replies').html(repliesHtml)
-          $('#input-reply-text').val('')
-          $("html, body").animate({
-            scrollTop: $(document).height()
-          }, 1000)
+        window.vertexLib.postRequest('/api/comment', comment, function(err, resp){
+          if (err){
+            alert('Error - '+err)
+            return
+          }
 
-          // update original comment with numRelies
-          setTimeout(function(){
-            postRequest('/account/updatereplies', {comment:comment.id}, function(err2, resp){
-              if (err2)
-                return
-
-              console.log('Num Replies: ' + JSON.stringify(resp))
-            })
-          }, 1000)
+          console.log('Comment Created: ' + JSON.stringify(resp))
+          $('#text-area-comment').val('')
+          comments.unshift(resp.result)
+          reloadUI()
         })
       })
     })()
   </script>
-
-  {{#renderAnalytics}}{{>analytics}}{{/renderAnalytics}}
 </body>
 </html>
