--- a/medium/widget/comments.mustache
+++ b/medium/widget/comments.mustache
@@ -7,8 +7,6 @@
 </head>
 
 <body>
-  {{>nav}}
-
 <div class="container pt-5">
   <div class="row">
 
@@ -44,6 +42,7 @@
 </div>
   {{>footer}}
   {{>auth}}
+  <a id="nav-register" style="display:none;background:#03a87c;color:#fff !important" class="nav-link" href="#" data-toggle="modal" data-target="#register-modal">JOIN VERTEX</a>
 
   <script type="text/template" id="tpl-thread">
     <h3 class="mb-0">
