--- a/medium/widget/comments.mustache
+++ b/medium/widget/comments.mustache
@@ -6,8 +6,8 @@
   {{>head}}
 </head>
 
-<body>
-<div class="container pt-4 pb-4">
+<body style="padding-top:0px">
+<div class="container pt-2 pb-4">
 	<div class="row justify-content-between">
 		<div class="col-md-8">
       <div id="thread-container"></div>
