open about link in new window

--- a/medium/widget/comments.mustache
+++ b/medium/widget/comments.mustache
@@ -24,7 +24,7 @@
             <img style="max-width:200px" src="https://lh3.googleusercontent.com/uFcvuH_Yifl0PaAMqcNIvuUqXl67M2hc54S523D1pwceSWrphPExoGe2rhPauCNjTgxzVQWSUolQTNeoow4m9mK5ibI" />
           </div>
           <p>Vertex 360 is a platform for content creators in the modern media age. Whether you manage a YouTube channel, podcast, blog, Instagram folowing, or all of the above, Vertex 360 provides the best way to deliver your content under a unified, coherent brand that you control.</p>
-          <a href="/about" class="btn btn-danger w-100">Learn More</a>
+          <a target="_blank" href="/about" class="btn btn-danger w-100">Learn More</a>
         </div>
       </div>
 
