remove invalid URL alert

--- a/medium/thread.mustache
+++ b/medium/thread.mustache
@@ -117,7 +117,7 @@
 
         if (resp.results.length == 0){
           // console.log('THREAD NOT FOUND')
-          alert('Error - Inavlid URL.')
+          // alert('Error - Inavlid URL.')
           return
         }
 
