--- a/medium/widget/comments.mustache
+++ b/medium/widget/comments.mustache
@@ -107,7 +107,7 @@
 
         if (resp.results.length == 0){
           // console.log('THREAD NOT FOUND')
-          alert('Error - Inavlid URL.')
+          // alert('Error - Inavlid URL.')
           return
         }
 
