--- a/medium/admin/pages.mustache
+++ b/medium/admin/pages.mustache
@@ -41,6 +41,12 @@
     .checkbox input {
       height: 20px !important;
     }
+
+    input {
+      padding: 0px;
+      margin: 0px;
+      border: none;
+    }
   </style>
 </head>
 
