--- a/medium/admin/pages.mustache
+++ b/medium/admin/pages.mustache
@@ -43,6 +43,7 @@
       padding: 0px !important;
       margin: 0px !important;
       border: none !important;
+      line-height: 40px !important;
     }
   </style>
 </head>
