input background color

--- a/medium/admin/pages.mustache
+++ b/medium/admin/pages.mustache
@@ -44,6 +44,8 @@
       margin: 0px !important;
       border: none !important;
       line-height: 40px !important;
+      height: 40px !important;
+      background: #f9f9f9 !important;
     }
   </style>
 </head>
