no padding right

--- a/medium/admin/pages.mustache
+++ b/medium/admin/pages.mustache
@@ -47,6 +47,10 @@
       height: 40px !important;
       background: #f9f9f9 !important;
     }
+
+    td {
+      padding-right: 0px !important;
+    }
   </style>
 </head>
 
