--- a/medium/feed.mustache
+++ b/medium/feed.mustache
@@ -40,6 +40,7 @@
         }
         #sidebar ul li {
             padding: 16px;
+            border-bottom: 1px solid #ededed;
         }
         #content {
             width: calc(100% - 275px);
